--- a/infra/ansible/roles/backned/templates/docker-compose.yml.j2
+++ b/infra/ansible/roles/backned/templates/docker-compose.yml.j2
@@ -1,12 +1,19 @@
 version: "3.8"
 services:
   backend:
-    image: {{ aws_account_id }}.dkr.ecr.{{ aws_region }}.amazonaws.com/revuhub-backend:{{ image_tag | default("latest") }}
+    image: {{ aws_account_id }}.dkr.ecr.{{ aws_region }}.amazonaws.com/revuhub-backend:{{ docker_image_tag }}
     env_file:
       - /home/ubuntu/production.env
     restart: always
     ports:
       - "4000:4000"
-    deploy:
-      restart_policy:
-        condition: on-failure
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/revuhub.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./frontend/build:/usr/share/nginx/html:ro
+    depends_on:
+      - backend
